--- a/day7/css/base.css
+++ b/day7/css/base.css
@@ -9,8 +9,8 @@ i{
     font-style: normal;
 }
 body{
-    background-color: #f1f1f1;
-    font-size: 16px;
+    background-color: #faf9f9;
+    font-size: 12px;
     line-height: 1.5;
     color: #333333;
     -webkit-text-size-adjust: 100%;
@@ -18,5 +18,5 @@ body{
 }
 a{
     text-decoration: none;
-    color: white;
+    color: black;
 }
