--- a/0907/xclx.css
+++ b/0907/xclx.css
@@ -39,6 +39,16 @@
     margin-top: 10px;
     margin-left: 10px;
 }
+.nav-left-1-img1{
+    display: inline-block;
+    width: 8px;
+    height: 5px;
+    vertical-align: middle;
+    margin-left: 10px;
+    background: url("./img/sprite.png") no-repeat -46px -58px;
+    position: relative;
+    top: 15px;
+}
 .nav-left-1-img2{
     float: left;
     background: url("./img/sprite.png");
@@ -75,7 +85,7 @@
     height: 12px;
     vertical-align: middle;
     margin-right: 4px;
-    margin-top: 3px;
+    margin-top: 2px;
     overflow: hidden;
     background-position: -8px -66px;
 }
@@ -85,7 +95,7 @@
     width: 8px;
     height: 5px;
     vertical-align: middle;
-    margin-top: 5px;
+    margin-top: 4px;
     margin-left: 10px;
     overflow: hidden;
     background-position: -46px -58px;
@@ -97,6 +107,8 @@
     display: inline-block;
     overflow: hidden;
     background-position: -100px -67px;
+    position: relative;
+    top: -3px;
 }
 .nav-right-1-img3{
     background: url("./img/sprite.png");
@@ -107,9 +119,86 @@
     background-position: -96px -100px;
     position: relative;
     right: -15px;
+    top: -3px;
 }
 a{
     text-decoration: none;
     color: #666;
     /*margin-left: 10px;*/
+}
+
+.nav-bar-second{
+    height: 60px;
+    width: 100%;
+    padding-top: 20px;
+}
+.nav-bar-second-s{
+    width: 1180px;
+    height: 100%;
+    margin: auto;
+}
+.nav-bar-second-left{
+    float: left;
+}
+.nav-bar-second-left-sou {
+    width: 382px;
+    height: 30px;
+    float: left;
+    border: 1px solid #8ebefc;
+    box-shadow: 2px 2px 1px 0 rgba(164, 203, 255, 0.25) inset;
+    outline: 0 none;
+    margin-top: 8px;
+    margin-left: 20px;
+}
+.nav-bar-second-left-sou input{
+    height: 30px;
+    width: 343px;
+    font-size: 15px;
+    float: left;
+}
+.nav-bar-second-left-sou button{
+    position: relative;
+    width: 39px;
+    height: 30px;
+    float: right;
+    border: 0 none;
+    background: url("./img/un_header_footer20160610.png") no-repeat -52px -603px #a4cbff;
+}
+.nav-bar-second-right{
+    height: 52px;
+    width: 150px;
+    /*display: block;*/
+    float: right;
+}
+.nav-bar-second-right li{
+    font-size: 12px;
+    float: right;
+    position: relative;
+    right: 50px;
+}
+
+.nav-bar-second-right .nav-bar-second-rightdown{
+    display: inline-block;
+    width: 8px;
+    height: 5px;
+    vertical-align: middle;
+    margin-left: 10px;
+    background: url("./img/sprite.png") no-repeat -46px -58px;
+    position: relative;
+    left: 100px;
+    top: 15px;
+}
+
+.nav-bar-three{
+    width: 100%;
+    height: 40px;
+    background-color: #2577e3;
+}
+.nav-bar-three-d{
+    width: 1180px;
+    height: 40px;
+    margin: auto;
+}
+.nav-bar-three li{
+
 }
